[project]
name = "llm-claude-3"
version = "0.6"
description = "LLM access to Claude 3 by Anthropic"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm>=0.17",
    "anthropic>=0.37.1",
]

[project.urls]
Homepage = "https://github.com/simonw/llm-claude-3"
Changelog = "https://github.com/simonw/llm-claude-3/releases"
Issues = "https://github.com/simonw/llm-claude-3/issues"
CI = "https://github.com/simonw/llm-claude-3/actions"

[project.entry-points.llm]
claude_3 = "llm_claude_3"

[project.optional-dependencies]
test = ["pytest", "pytest-recording"]
