[project]
name = "llm-claude-caching"
version = "0.4.1"
description = "LLM access to Claude 3 by Anthropic"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "anthropic>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/simonw/llm-claude-3"
Changelog = "https://github.com/simonw/llm-claude-3/releases"
Issues = "https://github.com/simonw/llm-claude-3/issues"
CI = "https://github.com/simonw/llm-claude-3/actions"

[project.entry-points.llm]
claude_3_cache = "llm_claude_3_cache"

[project.optional-dependencies]
test = ["pytest", "pytest-recording"]
